Created all three webpage templates
Created two other webpage templates and added the appropriate code to be able to render all three.

--- a/templates/columbia.html
+++ b/templates/columbia.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--specifies title of the page !-->
-        <title>Trinity Sazo</title>
+        <title>Trinity Sazo | Columbia</title>
     <head>
     <body>
     </body>
