--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--specifies title of the page !-->
-        <title>Trinity Sazo</title>
+        <title>Trinity Sazo | About</title>
     <head>
     <body>
     </body>
