--- a/templates/about.html
+++ b/templates/about.html
@@ -3,8 +3,37 @@
     <head>
         <!--specifies title of the page !-->
         <title>Trinity Sazo | About</title>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='../static/css/main.css') }}">
+
     <head>
     <body>
+    	{% extends "layout.html" %}
+		{% block content %}
+	  		<div class="about">
+
+	    		<h1>Trinity Sazo</h1>
+                <div class="sides">
+                    <p style="float:left;">uni: ts3185</p>
+                    <p style="float:right; clear: right;">github: tsazo</p>
+                </div>
+
+                <div class="section">
+                    <div class="sides">
+                        <h4>Columbia University — BS in Computer Science</h4>
+                        <p>Intended Grad: May 2023</p>
+                    </div>
+
+                    <p>Part of the Columbia Mentorship Initiative, Participated in Jumpstarting Aspiring Developers and Entrepreneurs, Future Spectator Member, Future Women in Computer Science Member</p>
+                </div>
+
+                <div class="section">
+                    <h4>Phillips Academy at Andover — High School Degree</h4>
+                    <p>Graduation: June 2019</p>
+                    <p>Astronomy Student Researcher, Co-Head of Yearbook Club, Girls Varsity Basketball Manager, For Colored Girls Actress, Chorous Member</p>
+                </div>
+	  		</div>
+		{% endblock %}
     </body>
 </html>
 
