--- a/templates/columbia.html
+++ b/templates/columbia.html
@@ -3,8 +3,16 @@
     <head>
         <!--specifies title of the page !-->
         <title>Trinity Sazo | Columbia</title>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='../static/css/main.css') }}">
     <head>
     <body>
+    	{% extends "layout.html" %}
+		{% block content %}
+	  		<div class="body columbia">
+	    		<h1>Columbia</h1>
+	  		</div>
+		{% endblock %}
     </body>
 </html>
 
