--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,24 @@
     <head>
         <!--specifies title of the page !-->
         <title>Trinity Sazo</title>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='../static/css/main.css') }}">
     <head>
     <body>
+    	{% extends "layout.html" %}
+		{% block content %}
+	  		<div class="body index">
+	    		<h1>Hi! I'm Trinity — also known as Trin.</h1>
+	    		<figure>
+	    			<img id="me" src="../static/images/IMG_5426.JPG" alt="A picture of me">
+	    			<figcaption>A picture of me in quarentine.</figcaption>
+	    		</figure>
+
+	    		<h4>I'm part of the class of 2023.</h4>
+	    		<h4>• • •</h4>
+	    		<h4>I'm interested in pursuing a degree in computer science as well as being on the premed track.</h4>
+	  		</div>
+		{% endblock %}		
     </body>
 </html>
 
