--- a/templates/about.html
+++ b/templates/about.html
@@ -20,17 +20,35 @@
 
                 <div class="section">
                     <div class="sides">
-                        <h4>Columbia University — BS in Computer Science</h4>
-                        <p>Intended Grad: May 2023</p>
+                        <h4 style="float:left; margin: 0;">Columbia University — BS in Computer Science</h4>
+                        <p style="float:right; clear: right; margin: 0;">Intended Grad: May 2023</p>
                     </div>
 
                     <p>Part of the Columbia Mentorship Initiative, Participated in Jumpstarting Aspiring Developers and Entrepreneurs, Future Spectator Member, Future Women in Computer Science Member</p>
                 </div>
 
                 <div class="section">
-                    <h4>Phillips Academy at Andover — High School Degree</h4>
-                    <p>Graduation: June 2019</p>
+                    <div class="sides">
+                        <h4 style="float:left; margin: 0;">Phillips Academy at Andover — High School Degree</h4>
+                        <p style="float:right; clear: right; margin: 0;">Graduation: June 2019</p>
+                    </div>
                     <p>Astronomy Student Researcher, Co-Head of Yearbook Club, Girls Varsity Basketball Manager, For Colored Girls Actress, Chorous Member</p>
+                </div>
+
+                <div class="section">
+                    <div class="sides">
+                        <h4 style="float:left; margin: 0;">Starbucks Barista</h4>
+                        <p style="float:right; clear: right; margin: 0;">June 2019 — January 2020</p>
+                    </div>
+                    <p>Yes. I know how to make all your favorite drinks if you like drinking from there. I recommend always heating up the pastries. ALWAYS. The paninis and the ready to eat (grab and go) food are fresh. Oh. And most importantly, please treat your baristas kindly. (The job is already mentally taxing enough.)</p>
+                </div>
+
+                <div class="section">
+                    <div class="sides">
+                        <h4 style="float:left; margin: 0;">Columbia Mentorship Initiative</h4>
+                        <p style="float:right; clear: right; margin: 0;">Mentor/Mentee</p>
+                    </div>
+                    <p>Part of the LatinX tree.</p>
                 </div>
 	  		</div>
 		{% endblock %}
