--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <body>
     	{% extends "layout.html" %}
 		{% block content %}
-	  		<div class="body index">
+	  		<div class="index">
 	    		<h1>Hi! I'm Trinity — also known as Trin.</h1>
 	    		<figure>
 	    			<img id="me" src="../static/images/IMG_5426.JPG" alt="A picture of me">
@@ -19,6 +19,9 @@
 	    		<h4>I'm part of the class of 2023.</h4>
 	    		<h4>• • •</h4>
 	    		<h4>I'm interested in pursuing a degree in computer science as well as being on the premed track.</h4>
+	    		<h4>• • •</h4>
+	    		<h4>I spend most of my time on Netflix or Spotify but I bet those are probably the typical websites people would choose as their favorite webstie. So here's a cool website I coded in high school. Enjoy!</h4>
+	    		<div><a href="https://tsazo.github.io/VimChat/" target="_blank">My Favorite Website!</a></div>
 	  		</div>
 		{% endblock %}		
     </body>
