Completed columbia page
Added an HTML table describing the classes I took and if I have passed them, along with the course numbers and credits associated with each.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,7 +32,7 @@ a:hover, .index div a:hover{
   transition: 0.3s;
 }
 
-.index {
+.index, .columbia {
   padding: 10px 0px 50px 00px;
   width: 90vw;
   margin: auto;
@@ -97,3 +97,6 @@ footer{
   color: white;
 }
 
+table, th, tr, td {
+  border: 1px solid black;
+}
