--- a/templates/columbia.html
+++ b/templates/columbia.html
@@ -10,7 +10,90 @@
     	{% extends "layout.html" %}
 		{% block content %}
 	  		<div class="body columbia">
-	    		<h1>Columbia</h1>
+	    		<h1>Columbia!</h1>
+	    		
+	    		<h2>First Year</h2>
+	    		<table>
+	    			<tr>
+	    				<th>Term</th>
+	    				<th>Course Code</th>
+	    				<th>Points</th>
+	    				<th>Passed (as of April 2020)</th>
+	    			</tr>
+	    			<tr>
+	    				<td>Fall 2019</td>
+	    				<td>CC1010</td>
+	    				<td>3</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Fall 2019</td>
+	    				<td>APMAE2001</td>
+	    				<td>4</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Fall 2019</td>
+	    				<td>UN1403</td>
+	    				<td>4</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Fall 2019</td>
+	    				<td>UN1401</td>
+	    				<td>3</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Fall 2019</td>
+	    				<td>W1004</td>
+	    				<td>3</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>UN1002</td>
+	    				<td>1</td>
+	    				<td>TRUE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>UN1404</td>
+	    				<td>4</td>
+	    				<td>FALSE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>E1006</td>
+	    				<td>3</td>
+	    				<td>FALSE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>E1102</td>
+	    				<td>3</td>
+	    				<td>FALSE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>UN1402</td>
+	    				<td>3</td>
+	    				<td>FALSE</td>
+	    			</tr>
+	    			<tr>
+	    				<td>Spring 2020</td>
+	    				<td>UN1500</td>
+	    				<td>3</td>
+	    				<td>FALSE</td>
+	    			</tr>
+	    		</table>
+
+	    		<h2>Second Year</h2>
+	    		<h3>TBD</h3>
+	    		<h2>Third Year</h2>
+	    		<h3>TBD</h3>
+	    		<h2>Fourth Year</h2>
+	    		<h3>TBD</h3>
 	  		</div>
 		{% endblock %}
     </body>
