--- a/templates/about.html
+++ b/templates/about.html
@@ -8,8 +8,10 @@
 
     <head>
     <body>
+        <!-- Extends layout -->
     	{% extends "layout.html" %}
 		{% block content %}
+            <!-- Containts body of about page -->
 	  		<div class="about">
 
 	    		<h1>Trinity Sazo</h1>
@@ -18,6 +20,7 @@
                     <p style="float:right; clear: right;">github: tsazo</p>
                 </div>
 
+                <!-- Section of about page -->
                 <div class="section">
                     <div class="sides">
                         <h4 style="float:left; margin: 0;">Columbia University — BS in Computer Science</h4>
@@ -27,6 +30,7 @@
                     <p>Part of the Columbia Mentorship Initiative, Participated in Jumpstarting Aspiring Developers and Entrepreneurs, Future Spectator Member, Future Women in Computer Science Member</p>
                 </div>
 
+                <!-- Section of about page -->
                 <div class="section">
                     <div class="sides">
                         <h4 style="float:left; margin: 0;">Phillips Academy at Andover — High School Degree</h4>
@@ -35,6 +39,7 @@
                     <p>Astronomy Student Researcher, Co-Head of Yearbook Club, Girls Varsity Basketball Manager, For Colored Girls Actress, Chorous Member</p>
                 </div>
 
+                <!-- Section of about page -->
                 <div class="section">
                     <div class="sides">
                         <h4 style="float:left; margin: 0;">Starbucks Barista</h4>
@@ -43,6 +48,7 @@
                     <p>Yes. I know how to make all your favorite drinks if you like drinking from there. I recommend always heating up the pastries. ALWAYS. The paninis and the ready to eat (grab and go) food are fresh. Oh. And most importantly, please treat your baristas kindly. (The job is already mentally taxing enough.)</p>
                 </div>
 
+                <!-- Section of about page -->
                 <div class="section">
                     <div class="sides">
                         <h4 style="float:left; margin: 0;">Columbia Mentorship Initiative</h4>
