--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <!-- Navigation bar -->
     <header>
       <div class="container">
         <h1 class="logo">TS</h1>
@@ -14,11 +15,13 @@
       </div>
     </header>
 
+    <!-- Where the content from each template goes -->
     <div class="container">
       {% block content %}
       {% endblock %}
     </div>
 
+    <!-- Footer -->
     <footer>
         <h6>Trinity Sazo &copy; May 2020</h6>
       </footer>
