--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,14 +1,4 @@
-/*body {
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
-}
-
-header {
-  text-align: center;
-}*/
-
+/* Body tag styling */
 body {
   margin: 0;
   padding: 0;
@@ -16,44 +6,52 @@ body {
   margin-bottom: 0px;
 }
 
+/* Header tag styling */
 header {
   text-align: center;
 }
 
+/* Anchor tag styling */
 a {
   text-decoration: none;
   color:darkgrey;
   transition: 0.3s;
 }
 
+/* Styling when user hovers over tag */
 a:hover, .index div a:hover{
   cursor: pointer;
   color: lightblue;
   transition: 0.3s;
 }
 
+/* Index class and columbia class styling */
 .index, .columbia {
   padding: 10px 0px 50px 00px;
   width: 90vw;
   margin: auto;
 }
 
+/* Figure tag styling */
 figure {
   text-align: center;
 }
 
+/* Image of me styling */
 #me {
   width: 50vw;
   height: 50vh;
   object-fit: contain;
 }
 
+/* Footer styling */
 footer{
   background-color: lightgrey;
   text-align: center;
   padding: 5px 0px;
 }
 
+/* About class styling */
 .about {
   width: 80vw;
   margin: 20px auto;
@@ -65,6 +63,7 @@ footer{
   text-align: center;
 }
 
+/* Section within about class */
 .section {
   margin: 0;
   padding: 0;
@@ -79,6 +78,7 @@ footer{
   text-align: right;
 }
 
+/* Index class styling */
 .index div {
   background-color: grey;
   padding: 10px;
@@ -92,11 +92,11 @@ footer{
   transition: 0.3s;
 }
 
-
 .index div a{
   color: white;
 }
 
+/* Table styling */
 table, th, tr, td {
   border: 1px solid black;
 }
