--- a/templates/columbia.html
+++ b/templates/columbia.html
@@ -7,12 +7,16 @@
   		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='../static/css/main.css') }}">
     <head>
     <body>
+    	<!-- Extends layout -->
     	{% extends "layout.html" %}
 		{% block content %}
+			<!-- Containts body of Columbia page -->
 	  		<div class="body columbia">
 	    		<h1>Columbia!</h1>
-	    		
+	    	
 	    		<h2>First Year</h2>
+
+	    		<!-- Table of classes -->
 	    		<table>
 	    			<tr>
 	    				<th>Term</th>
