--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,28 @@
   		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='../static/css/main.css') }}">
     <head>
     <body>
+    	<!-- Extends layout -->
     	{% extends "layout.html" %}
 		{% block content %}
+			<!-- Containts body of home page -->
 	  		<div class="index">
+	  			<!-- Top header text of page -->
 	    		<h1>Hi! I'm Trinity — also known as Trin.</h1>
+
+	    		<!-- Image of me -->
 	    		<figure>
 	    			<img id="me" src="../static/images/IMG_5426.JPG" alt="A picture of me">
 	    			<figcaption>A picture of me in quarentine.</figcaption>
 	    		</figure>
 
+	    		<!-- Required information about myself -->
 	    		<h4>I'm part of the class of 2023.</h4>
 	    		<h4>• • •</h4>
 	    		<h4>I'm interested in pursuing a degree in computer science as well as being on the premed track.</h4>
 	    		<h4>• • •</h4>
 	    		<h4>I spend most of my time on Netflix or Spotify but I bet those are probably the typical websites people would choose as their favorite webstie. So here's a cool website I coded in high school. Enjoy!</h4>
+
+	    		<!-- Link to my favorite website -->
 	    		<div><a href="https://tsazo.github.io/VimChat/" target="_blank">My Favorite Website!</a></div>
 	  		</div>
 		{% endblock %}		
